--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
     <script src="sidebar.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -44,9 +45,9 @@
     </div>
     <div class="container-submenu">
         <ul class="submenu">
-            <li><a href="#" class="facebook"></a></li>
-            <li><a href="#" class="twitter"></a></li>
-            <li><a href="#" class="instagram"></a></li>
+            <li><a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="#" class="fa fa-twitter fa-lg"></a></li>
+            <li><a href="#" class="fa fa-instagram fa-lg"></a></li>
         </ul>
     </div>
 </header>
