--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <div class="container">
         <div id="sidebar">
             <ul>
-                <li><a href="news.html"><span>Н</span>овини</a></li>
-                <li><a href="#"><span>П</span>роекти</a></li>
-                <li><a href="#"><span>Р</span>озклад</a></li>
-                <li><a href="#"><span>В</span>едучі</a></li>
-                <li><a href="#"><span>К</span>онтакти</a></li>
+                <li><a href="news.html">Головна</a></li>
+                <li><a href="news.html">Новини</a></li>
+                <li><a href="#">Проекти</a></li>
+                <li><a href="#">Розклад</a></li>
+                <li><a href="#">Ведучі</a></li>
+                <li><a href="#">Контакти</a></li>
             </ul>
         </div>
     <div class="main-content">
