--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div id="sidebar">
             <ul>
-                <li><a href="news.html">Головна</a></li>
+                <li><a href="index.html">Головна</a></li>
                 <li><a href="news.html">Новини</a></li>
                 <li><a href="#">Проекти</a></li>
                 <li><a href="#">Розклад</a></li>
