--- a/news.html
+++ b/news.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/news.css">
     <script src="sidebar.js"></script>
     <title>News</title>
@@ -12,11 +14,12 @@
                 <div class="container">
                     <div id="sidebar">
                         <ul>
-                            <li><a href="news.html"><span>Н</span>овини</a></li>
-                            <li><a href="#"><span>П</span>роекти</a></li>
-                            <li><a href="#"><span>Р</span>озклад</a></li>
-                            <li><a href="#"><span>В</span>едучі</a></li>
-                            <li><a href="#"><span>К</span>онтакти</a></li>
+                            <li><a href="index.html">Головна</a></li>
+                            <li><a href="news.html">Новини</a></li>
+                            <li><a href="#">Проекти</a></li>
+                            <li><a href="#">Розклад</a></li>
+                            <li><a href="#">Ведучі</a></li>
+                            <li><a href="#">Контакти</a></li>
                         </ul>
                     </div>
                 <div class="main-content">
@@ -29,8 +32,8 @@
                     </div>
                 </div>
                 <div class="con-logo">
-                        <a href="index.html"><img class="logo" src="image/logo.png" alt="logo"></a>
-                    </div>
+                    <a href="index.html"><img class="logo" src="image/logo.png" alt="logo"></a>
+                </div>
                 <div class="container-list">
                     <ul class="list-nav">
                         <li><a href="news.html"><span>Н</span>овини</a></li>
@@ -42,9 +45,9 @@
                 </div>
                 <div class="container-submenu">
                     <ul class="submenu">
-                        <li><a href="#" class="facebook"></a></li>
-                        <li><a href="#" class="twitter"></a></li>
-                        <li><a href="#" class="instagram"></a></li>
+                        <li><a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+                        <li><a href="#" class="fa fa-twitter fa-lg"></a></li>
+                        <li><a href="#" class="fa fa-instagram fa-lg"></a></li>
                     </ul>
                 </div>
             </header>
@@ -57,7 +60,7 @@
                 <div class="block2"><img src="http://www.armyfm.com.ua/1443bimg/u-vazhkomu-stanі-z-rajonu-provedennja-operacії-obєdnanih-sil-evakujovano-12-rіchnu-dіvchinu.jpg" alt=""></div>
                 <div class="block3"><a href=""><h4 class="title">У ВАЖКОМУ СТАНІ З РАЙОНУ ПРОВЕДЕННЯ ОПЕРАЦІЇ ОБ'ЄДНАНИХ СИЛ ЕВАКУЙОВАНО 12-РІЧНУ ДІВЧИНУ</h4></a>
                     <ul class="box_views">
-                            <li><a href="" class="views"> 861 ПЕРЕГЛЯДІВ </a></li>
+                            <li><a href="" class="views"><i class="fa fa-book"></i> 861 ПЕРЕГЛЯДІВ </a></li>
                         </ul>
                         <p class="text">У родині, що мешкає на Донеччині, сталася трагедія. Дванадцятирічна Юля внаслідок гострого порушення мозкового кровообігу та геморагічного інсульту опинилася в комі. Про це повідомив в ефірі Армія ФМ військовий журналіст Віктор Ануфрієв. Лікарі лиманського...</p>
                         <a href="" class="link">детальніше</a>
