--- a/news.html
+++ b/news.html
@@ -74,7 +74,7 @@
                     <div class="block2"><img src="http://www.armyfm.com.ua/1442bimg/profesіjnі-serzhanti-jakі-nablizhujut-vstup-do-nato.jpg" alt=""></div>
                     <div class="block3"><a href=""><h4 class="title">ПРОФЕСІЙНІ СЕРЖАНТИ, ЯКІ НАБЛИЖУЮТЬ ВСТУП ДО НАТО</h4></a>
                         <ul class="box_views">
-                                <li><a href="" class="views"> 559 ПЕРЕГЛЯДІВ</a></li>
+                                <li><a href="" class="views"><i class="fa fa-book"></i> 559 ПЕРЕГЛЯДІВ</a></li>
                             </ul>
                             <p class="text">Сьогодні, коли країна продовжує протистояти російській агресії, все більше молодих людей переконується, у перспективності фахової армійської освіти. Щороку десятки школярів обирають службу в армії та складні технічні спеціальності, вступаючи на навчання до Військового...</p>
                             <a href="" class="link">детальніше</a>
