--- a/index.html
+++ b/index.html
@@ -25,11 +25,7 @@
         </div>
     <div class="main-content">
         <div class="swipe-area"></div>
-            <a href="#" data-toggle=".container" id="sidebar-toggle">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
+            <a href="#" class="but fa fa-bars fa-2x"  data-toggle=".container" id="sidebar-toggle"></a>
         </div>
     </div>
     <div class="con-logo">
