--- a/news.html
+++ b/news.html
@@ -23,14 +23,10 @@
                             <li><a href="#">Контакти</a></li>
                         </ul>
                     </div>
-                <div class="main-content">
-                    <div class="swipe-area"></div>
-                        <a href="#" data-toggle=".container" id="sidebar-toggle">
-                            <span class="bar"></span>
-                            <span class="bar"></span>
-                            <span class="bar"></span>
-                        </a>
-                    </div>
+                    <div class="main-content">
+                        <div class="swipe-area"></div>
+                            <a href="#" class="but fa fa-bars fa-2x"  data-toggle=".container" id="sidebar-toggle"></a>
+                        </div>
                 </div>
                 <div class="con-logo">
                     <a href="index.html"><img class="logo" src="image/logo.png" alt="logo"></a>
