--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="main-content">
                         <div class="swipe-area"></div>
-                            <a href="#" class="but fa fa-bars fa-2x"  data-toggle=".container" id="sidebar-toggle"></a>
+                            <a href="#" class="but fa fa-bars fa-lg"  data-toggle=".container" id="sidebar-toggle"></a>
                         </div>
                 </div>
                 <div class="con-logo">
@@ -42,9 +42,9 @@
                 </div>
                 <div class="container-submenu">
                     <ul class="submenu">
-                        <li><a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="fa fa-twitter fa-lg"></a></li>
-                        <li><a href="#" class="fa fa-instagram fa-lg"></a></li>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a href="#" class="fa fa-twitter"></a></li>
+                        <li><a href="#" class="fa fa-instagram"></a></li>
                     </ul>
                 </div>
             </header>
