--- a/news.html
+++ b/news.html
@@ -96,6 +96,9 @@
                 </div>  
             </li>
         </ul>
-    </div>          
+    </div>
+    <div class="soundcloud">
+        <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/435486087&color=%23d0258d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    </div>         
 </body>
 </html>
