--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 <body class="background">
 <header>
-    <div class="container">
-        <div id="sidebar">
-            <ul>
-                <li><a href="index.html">Головна</a></li>
-                <li><a href="news.html">Новини</a></li>
-                <li><a href="#">Проекти</a></li>
-                <li><a href="#">Розклад</a></li>
-                <li><a href="#">Ведучі</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </div>
+        <div class="container">
+                <div id="sidebar">
+                    <ul>
+                        <li><a href="index.html">Головна</a></li>
+                        <li><a href="news.html">Новини</a></li>
+                        <li><a href="#">Проекти</a></li>
+                        <li><a href="#">Розклад</a></li>
+                        <li><a href="#">Ведучі</a></li>
+                        <li><a href="#">Контакти</a></li>
+                    </ul>
+                </div>   
     <div class="main-content">
         <div class="swipe-area"></div>
             <a href="#" class="but fa fa-bars fa-lg"  data-toggle=".container" id="sidebar-toggle"></a>
@@ -48,8 +48,10 @@
         </ul>
     </div>
 </header>
+<div style="height:150px">
+</div>
 <div class="soundcloud">
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/435486087&color=%23d0258d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <iframe width="100%" height="350" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/users/435486087&color=%23d0258d&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 </div>    
 </body>
 </html>
