--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/news.css">
-    <script src="sidebar.js"></script>
+    <script src="main.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>News</title>
 </head>
