--- a/index.html
+++ b/index.html
@@ -50,12 +50,15 @@
     </div>
 </header>
 <div class="player">
-<audio src="" controls id="audioPlayer" autoplay="preload">
+<audio src="" controls id="audioPlayer">
     Sorry, your browser doesn't support html5!
+    <source src="music/track1.mp3" type="audio/mpeg">
+        <source src="music/track1.ogg" type="audio/ogg">   
 </audio>
 <ul id="playlist">
+     
     <li class="current-song song"><a href="music/track1.mp3">Ярмарок шампанського</a></li>
-    <li class="song"><a href="music/track2.mp3">50 відтінків кіно</a></li>   
+    <li class="song"><a href="music/track2.mp3">50 відтінків кіно</a></li>    
 </ul>
 </div>
 <script>
