--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
     </div>
 </header>
 <div class="player">
-<audio src="" controls id="audioPlayer">
-    Sorry, your browser doesn't support html5!
-    <source src="music/track1.mp3" type="audio/mpeg">
-        <source src="music/track1.ogg" type="audio/ogg">   
-</audio>
-<ul id="playlist">
-     
+    <audio controls>
+        <source src="music/track1.ogg" type="audio/ogg; codecs=vorbis">
+        <source src="music/track1.mp3" type="audio/mpeg">
+        <source src="music/track2.ogg" type="audio/ogg; codecs=vorbis">
+        <source src="music/track2.mp3" type="audio/mpeg">
+        Тег audio не поддерживается вашим браузером. 
+      </audio>
+<ul id="playlist">    
     <li class="current-song song"><a href="music/track1.mp3">Ярмарок шампанського</a></li>
     <li class="song"><a href="music/track2.mp3">50 відтінків кіно</a></li>    
-</ul>
+</ul> 
 </div>
 <script>
     audioPlayer();
