--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/demo.css" />
+    <link rel="stylesheet" href="css/audioplayer.css"/>
     <script src="main.js"></script>
     <script src="audioPlayer.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -49,17 +51,15 @@
         </ul>
     </div>
 </header>
-<div class="player">
-    <audio controls  id="audioPlayer">
-        <source src="music/track1.ogg" type="audio/ogg; codecs=vorbis">
-        <source src="music/track1.mp3" type="audio/mpeg">
-<ul id="playlist">    
-    <li class="current-song song"><a href="music/track1.mp3">Ярмарок шампанського</a></li>
-    <li class="song"><a href="music/track2.mp3">50 відтінків кіно</a></li>    
-</ul> 
+<div id="wrapper">
+    <audio preload="auto" controls>
+        <source src="music/track1.mp3">
+        <source src="music/track1.ogg">
+        <source src="music/track1.wav">
+    </audio>
+    <script src="js/jquery.js"></script>
+    <script src="js/audioplayer.js"></script>
+    <script>$( function() { $( 'audio' ).audioPlayer(); } );</script>
 </div>
-<script>
-    audioPlayer();
-</script>
 </body>
 </html>
