--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
-    <script type="text/javascript" src="jquery.touchSwipe.min.js"></script>
-    <script src="main.js"></script>
-    <script src="audioPlayer.js"></script>
+    <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+    <script src="js/main.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Radio BG</title>
 </head>
