--- a/news.html
+++ b/news.html
@@ -26,7 +26,7 @@
             </div>
             <div class="main-content">
                 <div class="swipe-area"></div>
-                <a href="#" class="but fa fa-bars fa-lg" data-toggle=".container" id="sidebar-toggle"></a>
+                <a href="#" target="_blan" class="but fa fa-bars fa-lg" data-toggle=".container" id="sidebar-toggle"></a>
             </div>
         </div>
         <div class="con-logo">
@@ -69,7 +69,6 @@
                         </li>
                         <li>
                             <p class="text">У родині, що мешкає на Донеччині, сталася трагедія. Дванадцятирічна Юля внаслідок гострого порушення мозкового кровообігу та геморагічного інсульту опинилася в комі. Про це повідомив в ефірі Армія ФМ військовий журналіст Віктор Ануфрієв. Лікарі лиманського...</p>
-                            <a href="" class="link">Детальніше</a>
                         </li>
                     </ul>
                 </div>
@@ -91,7 +90,6 @@
                         </li>
                         <li>
                             <p class="text">У родині, що мешкає на Донеччині, сталася трагедія. Дванадцятирічна Юля внаслідок гострого порушення мозкового кровообігу та геморагічного інсульту опинилася в комі. Про це повідомив в ефірі Армія ФМ військовий журналіст Віктор Ануфрієв. Лікарі лиманського...</p>
-                            <a href="" class="link">Детальніше</a>
                         </li>
                     </ul>
                 </div>
