--- a/leading.html
+++ b/leading.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title>Ведучі</title>
     <link rel="stylesheet" href="css/leading.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
